tests/neg/i16453.check
-- [E172] Type Error: tests/neg/i16453.scala:14:21 ---------------------------------------------------------------------
14 |  summon[Option[Int]] // error
   |                     ^
   |No given instance of type Option[Int] was found for parameter x of method summon in object Predef
   |
   |Note: Chaining implicit conversions are not allowed in Scala. The following conversions are in scope:
   |  - final given def given_Conversion_T_Option[T]: Conversion[T, Option[T]]
   |  - implicit def toOption[T](t: T): Option[T]
   |If there is an implicit `Conversion[A, Option[Int]]` and an implicit `A` in scope, you can explicitly pass the argument, e.g. `(using summon[A])`
-- [E172] Type Error: tests/neg/i16453.scala:15:25 ---------------------------------------------------------------------
15 |  implicitly[Option[Int]] // error
   |                         ^
   |No given instance of type Option[Int] was found for parameter e of method implicitly in object Predef
   |
   |Note: Chaining implicit conversions are not allowed in Scala. The following conversions are in scope:
   |  - final given def given_Conversion_T_Option[T]: Conversion[T, Option[T]]
   |  - implicit def toOption[T](t: T): Option[T]
   |If there is an implicit `Conversion[A, Option[Int]]` and an implicit `A` in scope, you can explicitly pass the argument, e.g. `(using summon[A])`
